--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
     "level": 1,
     "v2": true,
     "history": {
+      "v1.5": "修复cfst",
       "v1.4": "修复立即运行一次",
       "v1.3": "调整插件开启状态判断条件",
       "v1.2": "增强API安全性"
