--- a/package.json
+++ b/package.json
@@ -219,7 +219,7 @@
     "labels": "网络,站点",
     "version": "1.4",
     "icon": "cloudflare.jpg",
-    "author": "thsrite",
+    "author": "valentine",
     "level": 1,
     "v2": true,
     "history": {
